--- a/src/components/Main/Contact/Contact.module.css
+++ b/src/components/Main/Contact/Contact.module.css
@@ -42,6 +42,12 @@
 }
 
 @media(max-width:770px){
+    .container{
+        
+        height: 100%;
+        padding: 10px;
+        
+    }
     .header{
        
         width:40%;
