--- a/src/common/Section/Section.module.css
+++ b/src/common/Section/Section.module.css
@@ -1,5 +1,6 @@
 .container{
     /* height: 680px; */
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -19,7 +20,7 @@
     color: #434364;
     letter-spacing: 0.6px;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     
 }
 
@@ -29,13 +30,14 @@
     gap: 20px;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin-top: 20px;
 
 
 }
 
 .icon{
-    width: 280px;
-    height: 308px;
+    width: 260px;
+    /* height: 308px; */
     display: flex;
     flex-direction: column;
     
