--- a/src/components/Header/Menu/Menu.module.css
+++ b/src/components/Header/Menu/Menu.module.css
@@ -12,7 +12,7 @@
     font-weight: 500;
     text-decoration: none;
     color: #FFFFFF;
-    padding: 0 10px;
+    padding: 10px 10px;
     /* z-index: 2; */
     
 }
