--- a/src/components/Main/Offer/Offer.module.css
+++ b/src/components/Main/Offer/Offer.module.css
@@ -6,8 +6,16 @@
     position: relative;
 }
 
+.imgBlock{
+    display: flex;
+    flex-direction: column;
+}
+
+
+
 .image {
     width: 100%;
+    color: #EAECF1;
 }
 
 
@@ -21,7 +29,7 @@
     /* height: 270px; */
     position: absolute;
     top: 110px;
-    left: 80px;
+    left: 130px;
 
 }
 
@@ -111,9 +119,29 @@
     background: linear-gradient(90.49deg, #FFEB80 0%, #FDBFA3 100.2%);
 }
 
-.dot {
-    padding: 5px;
+/* .Offer_buttonStyle__ypdgl{
+    background: rgba(0, 0, 0, 0);
+}
+.Offer_buttonStyle__ypdgl{
+    background: rgba(0, 0, 0, 0);
+} */
 
+.buttonStyle{
+    
+      width: 120px;
+         
+        height: 300px;
+       padding: 200px;
+       
+       /* background: rgba(0, 0, 0, 0); */
+        
+
+    
+}
+
+.dot {
+    padding: 6px;
+    
 
 }
 
@@ -121,13 +149,21 @@
     display: flex;
     flex-direction: column;
     left: 670px;
+   
 }
 
 .containerDot {
     display: flex;
-    margin: 300px;
+    /* margin:  300px; */
+    margin-bottom: 300px;
+   
 
 
+}
+
+svg{
+width: 8px;
+height: 8px;
 }
 
 @media(max-width: 1030px) {
@@ -137,6 +173,13 @@
         left: 40px;
 
     }
+    .buttonStyle{
+ 
+       margin-top: 150px;      
+  
+      
+  }
+  
 
 }
 
@@ -146,6 +189,12 @@
         width: 80%;
 
     }
+    .buttonStyle{
+ 
+        margin-top: 250px;      
+   
+       
+   }
 
 }
 
