--- a/src/components/Main/Questions/QuestionCarousel.js/QuestionCarousel.module.css
+++ b/src/components/Main/Questions/QuestionCarousel.js/QuestionCarousel.module.css
@@ -81,12 +81,32 @@
 .container2{
     /* display: flex; */
     /* justify-content: center; */
-    width: 1180px;
+    width: 100%;
     text-align: center;
     margin-bottom: 30px;
 }
 
 .carousel{
     
+    
+}
+
+@media(max-width:910px){
+    .container{
+       
+        padding: 60px 60px 60px 80px;
+        
+    }
+    .cards{
+        width: 280px;
+      
+    }
+}
+@media(max-width:500px){
+    .container{
+       
+        display: none;
+        
+    }
     
 }
